Make sure that an item's visualRect in the Details View is not wider than the "Name" column. Fixes keyboard navigation problems if files with very wide names are present in the current folder.

Unit test included.

BUG: 257401
FIXED-IN: 4.5.4


svn path=/branches/KDE/4.5/kdebase/apps/; revision=1199124